--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "gsap": "^3.11.5",
     "vue": "^3.2.13"
   },
   "devDependencies": {
